# telegram-selenium-tools

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
config/: .env.example
src/: __init__.py
src/selenium_service/: api.py  cache_manager.py  foreca.py  models.py  selenium_service.py
src/telegram_bot/: main.py  telegram_service.py
tests/: test_selenium_service.py  test_telegram_service.py
